--- a/pom.xml
+++ b/pom.xml
@@ -63,10 +63,19 @@
             <artifactId>maven-core</artifactId>
             <version>3.0.5</version>
         </dependency>
+
+        <!-- dependencies for unit test -->
         <dependency>
-            <groupId>org.eclipse.aether</groupId>
-            <artifactId>aether-api</artifactId>
-            <version>1.0.0.v20140518</version>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.5</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
@@ -98,7 +107,6 @@
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>2.17</version>
             </plugin>
-
         </plugins>
     </build>
 </project>
