--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,15 @@
 
     <build>
         <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                    <fork>true</fork>
+                </configuration>
+            </plugin>
+
             <!-- Code analysis plugins -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
