--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,10 @@
     <version>0.1.0-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
 
-
-    <name>Maven License Verifier</name>
-    <description>A maven plugin to verify dependency licenses</description>
+    <name>${project.groupId}:${project.artifactId}</name>
+    <description>A maven plugin to verify dependency licenses.
+        If an unknown or "bad" license is detected, the build will fail.</description>
+    <url>https://github.com/AyoyAB/Ayoy-Maven-License-Verifier-Plugin</url>
 
     <inceptionYear>2017</inceptionYear>
 
@@ -43,6 +44,12 @@
             <organizationUrl>https://www.ayoy.se</organizationUrl>
         </developer>
     </developers>
+
+    <scm>
+        <connection>scm:git:git://github.com/AyoyAB/Ayoy-Maven-License-Verifier-Plugin.git</connection>
+        <developerConnection>scm:git:ssh://github.com:AyoyAB/Ayoy-Maven-License-Verifier-Plugin.git</developerConnection>
+        <url>http://github.com/AyoyAB/Ayoy-Maven-License-Verifier-Plugin/tree/master</url>
+    </scm>
 
     <dependencies>
         <dependency>
