build fix (maven-plugin-plugin:3.2:descriptor failed: 24282) - updated maven-plugin-plugin:3.3

--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,10 @@
     <build>
         <plugins>
             <plugin>
+                <artifactId>maven-plugin-plugin</artifactId>
+                <version>3.3</version>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
