--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -54,7 +54,7 @@
             <plugin>
                 <groupId>se.ayoy.maven-plugins</groupId>
                 <artifactId>ayoy-license-verifier-maven-plugin</artifactId>
-                <version>1.0.4-SNAPSHOT</version>
+                <version>1.0.5</version>
                 <executions>
                     <execution>
                         <phase>compile</phase>
