#14: Added my contributor information

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
             <email>tibordigana@apache.org</email>
             <url>https://github.com/Tibor17/</url>
         </contributor>
+        <contributor>
+            <name>Mads Opheim</name>
+            <email>mads.opheim@gmail.com</email>
+            <url>https://github.com/madsop/</url>
+        </contributor>
     </contributors>
 
     <scm>
