#10: Switch to Spotbugs instead of FindBugs.

--- a/pom.xml
+++ b/pom.xml
@@ -161,13 +161,15 @@
 
             <!-- Code analysis plugins -->
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>findbugs-maven-plugin</artifactId>
-                <version>3.0.5</version>
+                <groupId>com.github.spotbugs</groupId>
+                <artifactId>spotbugs-maven-plugin</artifactId>
+                <version>3.1.11</version>
                 <configuration>
                     <xmlOutput>true</xmlOutput>
                     <!-- Optional directory to put findbugs xdoc xml report -->
                     <xmlOutputDirectory>target</xmlOutputDirectory>
+                    <effort>Max</effort>
+                    <threshold>Low</threshold>
                     <failOnError>true</failOnError>
                 </configuration>
                 <executions>
