Fix #10 by adding a place holder for findsecbugs.

--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,13 @@
                     <effort>Max</effort>
                     <threshold>Low</threshold>
                     <failOnError>true</failOnError>
+                    <plugins>
+                        <!--<plugin>
+                            <groupId>com.h3xstream.findsecbugs</groupId>
+                            <artifactId>findsecbugs-plugin</artifactId>
+                            <version>1.9.0</version>
+                        </plugin>-->
+                    </plugins>
                 </configuration>
                 <executions>
                     <execution>
