--- a/src/it/artifact-with-license-and-ignored/pom.xml
+++ b/src/it/artifact-with-license-and-ignored/pom.xml
@@ -5,8 +5,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>se.ayoy.maven-plugins.its</groupId>
-    <artifactId>unverified-license</artifactId>
+    <artifactId>artifact-with-license-and-ignored</artifactId>
     <version>1.0</version>
+
+    <licenses>
+        <license>
+            <name>Parent POM license name</name>
+        </license>
+    </licenses>
 
     <dependencies>
         <dependency>
